--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" style="color: black;" href="">Home</a>
+                <a class="nav-link active" aria-current="page" style="color: black;" href="https://karamchandsubash.github.io/Ex3/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" style="color: black;" href="#">Our Team</a>
