--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
     <form>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label" style="margin-left: 23%;">First Name</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="first name" style="width: 51%; margin-left: 23%; margin-right: 25%;">
+          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="first name" style="width: 51%; margin-left: 23%; margin-right: 25%;">
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label" style="margin-left: 23%;">Second Name</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="second name" style="width: 51%; margin-left: 23%; margin-right: 25%;">
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="second name" style="width: 51%; margin-left: 23%; margin-right: 25%;">
           </div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label" style="margin-left: 23%;">Email address</label>
